projects/elements/src/range/range.global.css
nve-range input[type='range']::-webkit-slider-thumb,
nve-range input[type='range']::-webkit-slider-thumb {
  width: var(--thumb-width);
  height: var(--thumb-height);
  background: var(--thumb-background);
  border-radius: 50%;
  box-shadow: var(--thumb-border);
  margin-top: calc((var(--track-height) - var(--thumb-height)) / 2);
  appearance: var(--_appearance);
}

nve-range input[type='range']::-webkit-slider-runnable-track,
nve-range input[type='range']::-webkit-slider-runnable-track {
  background: var(--nve-sys-interaction-background);
  height: var(--track-height);
  border-radius: var(--nve-ref-border-radius-lg);
  align-self: center;
}

nve-range:has(datalist) input[type='range']::-webkit-slider-container {
  min-block-size: auto;
}

